--- a/esda.Rmd
+++ b/esda.Rmd
@@ -68,7 +68,7 @@ For Organization Name, put "St. Mary's College of Maryland" and for your email e
 
 After you receive the email containing your Census API Key insert it in the code below between the quotes and run the code to install it in your R environment.
 ```{r, eval = FALSE}
-census_api_key("your_census_api_key_goes_here", install = TRUE)
+census_api_key("your_census_api_key_goes_here")
 ```
 
 Note that copying and pasting the code snippets is fine and can be very helpful, but it's a better idea for learning to type out the code manually each time. When you've really got the hang of it, then copying and pasting can save a lot of time! Try not to copy and paste the code for the remaining lab exercises.
